<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_width_linear"
            android:layout_weight="@dimen/layout_weight_second_linear"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/layout_height_width_linear"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight_third_linear"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top_big"
                    android:fontFamily="@string/font_family_name"
                    android:padding="@dimen/padding"
                    android:text="@string/team_one"
                    android:textAllCaps="true"
                    android:textColor="@color/team_name"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/white_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top_small"
                    android:fontFamily="@string/font_family_score"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/score_team_white"
                    android:textColor="@color/team_score"
                    android:textSize="@dimen/text_size_big" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_marginTop="@dimen/layout_margin_left_right"
                    android:onClick="submitWinWhite"
                    android:text="@string/plus_one_win" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_marginTop="@dimen/layout_margin_top_smallest"
                    android:onClick="submitDrawWhite"
                    android:text="@string/plus_half_draw" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_marginTop="@dimen/layout_margin_top_smallest"
                    android:onClick="submitLossWhite"
                    android:text="@string/plus_zero_loss" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/layout_width_view"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:layout_marginTop="@dimen/layout_margin_top_biggest"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="@dimen/layout_height_width_linear"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight_third_linear"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top_big"
                    android:fontFamily="@string/font_family_name"
                    android:padding="@dimen/padding"
                    android:text="@string/team_two"
                    android:textAllCaps="true"
                    android:textColor="@color/team_name"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/black_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top_small"
                    android:fontFamily="@string/font_family_score"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/score_team_black"
                    android:textColor="@color/team_score"
                    android:textSize="@dimen/text_size_big" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_marginTop="@dimen/layout_margin_left_right"
                    android:onClick="submitWinBlack"
                    android:text="@string/plus_one_win" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_marginTop="@dimen/layout_margin_top_smallest"
                    android:onClick="submitDrawBlack"
                    android:text="@string/plus_half_draw" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_marginTop="@dimen/layout_margin_top_smallest"
                    android:onClick="submitLossBlack"
                    android:text="@string/plus_zero_loss" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_margin_top_medium"
            android:gravity="center"
            android:onClick="resetScore"
            android:text="@string/text_button" />

    </LinearLayout>
</ScrollView>